# facet-kdl

./: CHANGELOG.md  Cargo.toml  README.md  README.md.in
examples/: error_showcase.rs  showcase.rs
src/: deserialize.rs  lib.rs  serialize.rs
tests/: basic.rs  collections.rs  deny_unknown.rs  diagnostics.rs  enums.rs  flatten.rs  ptr.rs  rename.rs  serialize.rs  spanned.rs  transparent.rs  type_annotations.rs
